fixed post show on mobile

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -114,13 +114,6 @@
   }
   }
 
-  .show-container{
-    margin-left: 250px;
-    margin-right: 100px;
-    padding-left: 50px;
-    margin-top: 50px;
-  }
-
   .desktop-post-card{
     border-radius: 0px;
   }
@@ -270,8 +263,7 @@ width: 30px;
   }
 }
 .comment-section{
-  padding: 0px 18px;
-
+  padding: 0px 18px 28px 18px
 }
 
 .time-created{
