--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -2,7 +2,7 @@
 .comment-box{
   textarea{
     background-color: black;
-    border-color: white;
+    border: solid 1px white;
     color: white;
     border-radius: 16px;
   }
